fix: title not showing

--- a/src/app/components/Cms/Article/Article.module.scss
+++ b/src/app/components/Cms/Article/Article.module.scss
@@ -42,16 +42,19 @@ $cover-height: min(300px, 40vh);
                 }
             }
         }
-        .title {
-            font-size: ohma.$fonts-xxl;
-            font-family: ohma.$fonts-secondary;
-            text-transform: uppercase;
-            color: ohma.$colors-white;
+        >*:nth-child(2) {
             position: absolute;
             left: $padding;
             bottom: 1em;
-            z-index: 2;
-        }
+            .title {
+                font-size: ohma.$fonts-xxl;
+                font-family: ohma.$fonts-secondary;
+                text-transform: uppercase;
+                color: ohma.$colors-white;
+                z-index: 2;
+            }
+        }   
+        
     }
     article {
         > * {
