--- a/src/app/components/SlideInOnView/SlideInOnView.module.scss
+++ b/src/app/components/SlideInOnView/SlideInOnView.module.scss
@@ -3,21 +3,21 @@
 .SlideInOnView {
     opacity: 0;
     &.bottom {
-        transform: translateX(-20px);
+        transform: translate(0, 20px);
     }
     &.top {
-        transform: translateX(20px);
+        transform: translate(0, -20px);
     }
     &.left {
-        transform: translateY(20px);
+        transform: translate(-20px, 0);
     }
     &.right {
-        transform: translateY(-20px);
+        transform: translateX(20px, 0);
     }
     transition: opacity 1s, transform .6s; 
     &.visible {
         opacity: 1;
-        
+        transform: translate(0, 0);
     }
 }
 
